--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,26 @@
-#container {
-    display: flex; /* Enables a sidebar layout */
+#wrapper {
+    background-color: rgb(124, 243, 144);
+    border-style: double;
 }
 
+
+
+#header {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:  rgb(124, 243, 144);
+    font-size: larger;
+    font-weight: bold;
+    text-align: center;
+    border: 2px black solid;
+    /* border-style: double; */
+}
+
+#map{
+    position: fixed;
+    width: 100%;
+    height: 80%; 
+}
+
+#python_output{
+    position: fixed;
+}
