--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@
     border-style: double;
 }
 
-
-
 #header {
     font-family: Arial, Helvetica, sans-serif;
     background-color:  rgb(124, 243, 144);
@@ -16,11 +14,12 @@
 }
 
 #map{
-    position: fixed;
+    position: absolute;
     width: 100%;
-    height: 80%; 
+    height: 100%; 
 }
 
-#python_output{
+#button{
     position: fixed;
+    align-items: right;
 }
